// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTheme atlassian theme should match theme object for "create" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "var(--ds-background-brand-bold-pressed, rgba(0, 82, 204, 0.8))",
    "boxShadow": "",
    "color": "var(--ds-text-inverse, #FFFFFF)",
  },
  "default": Object {
    "backgroundColor": "var(--ds-background-brand-bold, #0052CC)",
    "boxShadow": "",
    "color": "var(--ds-text-inverse, #FFFFFF)",
  },
  "focus": Object {
    "backgroundColor": "var(--ds-background-brand-bold, #0052CC)",
    "boxShadow": "0 0 0 2px var(--ds-border-focused, rgb(128,169,230))",
    "color": "var(--ds-text-inverse, #FFFFFF)",
  },
  "hover": Object {
    "backgroundColor": "var(--ds-background-brand-bold-hovered, rgba(0, 82, 204, 0.9))",
    "boxShadow": "",
    "color": "var(--ds-text-inverse, #FFFFFF)",
  },
  "selected": Object {
    "backgroundColor": "",
    "boxShadow": "",
    "color": "",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "iconButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "var(--ds-background-neutral-pressed, rgba(222, 235, 255, 0.6))",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #0052CC)",
  },
  "default": Object {
    "backgroundColor": "transparent",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #344563)",
  },
  "focus": Object {
    "backgroundColor": "var(--ds-background-selected-hovered, rgba(222, 235, 255, 0.5))",
    "boxShadow": "0 0 0 2px var(--ds-border-focused, #2684FF)",
    "color": "var(--ds-text-subtle, #344563)",
  },
  "hover": Object {
    "backgroundColor": "var(--ds-background-neutral-hovered, rgba(222, 235, 255, 0.9))",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #0052CC)",
  },
  "selected": Object {
    "backgroundColor": "var(--ds-background-selected, rgba(222, 235, 255, 0.6))",
    "boxShadow": "",
    "color": "var(--ds-text-selected, #0052CC)",
  },
  "selectedHover": Object {
    "backgroundColor": "var(--ds-background-selected-hovered, rgba(222, 235, 255, 0.6))",
    "boxShadow": "",
    "color": "var(--ds-text-selected, #0052CC)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "navigation" 1`] = `
Object {
  "backgroundColor": "var(--ds-surface, #FFFFFF)",
  "color": "var(--ds-text-subtlest, #6B778C)",
}
`;

exports[`generateTheme atlassian theme should match theme object for "primaryButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "var(--ds-background-neutral-pressed, rgba(222, 235, 255, 0.7))",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #0052CC)",
  },
  "default": Object {
    "backgroundColor": "transparent",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #344563)",
  },
  "focus": Object {
    "backgroundColor": "",
    "boxShadow": "0 0 0 2px var(--ds-border-focused, #2684FF)",
    "color": "var(--ds-text-subtle, #344563)",
  },
  "hover": Object {
    "backgroundColor": "var(--ds-background-neutral-hovered, rgba(222, 235, 255, 0.9))",
    "boxShadow": "",
    "color": "var(--ds-text-subtle, #0052CC)",
  },
  "selected": Object {
    "backgroundColor": "var(--ds-background-selected, rgba(222, 235, 255, 0.7))",
    "borderColor": "var(--ds-border-selected, #0052CC)",
    "boxShadow": "",
    "color": "var(--ds-text-selected, #0052CC)",
  },
  "selectedHover": Object {
    "backgroundColor": "var(--ds-background-selected-hovered, rgba(222, 235, 255, 0.6))",
    "borderColor": "var(--ds-border-selected, #0052CC)",
    "boxShadow": "",
    "color": "var(--ds-text-selected, #0052CC)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "productHome" 1`] = `
Object {
  "backgroundColor": "var(--ds-text-brand, #0052CC)",
  "borderRight": "1px solid var(--ds-border, rgba(107, 119, 140, 0.3))",
  "color": "var(--ds-text, #253858)",
  "iconColor": "#2684FF",
  "iconGradientStart": "#0052CC",
  "iconGradientStop": "#2684FF",
}
`;

exports[`generateTheme atlassian theme should match theme object for "search" 1`] = `
Object {
  "default": Object {
    "backgroundColor": "var(--ds-surface, #FFFFFF)",
    "borderColor": "var(--ds-border, #DFE1E6)",
    "color": "var(--ds-text-subtlest, #6B778C)",
  },
  "focus": Object {
    "borderColor": "var(--ds-border-focused, #2684FF)",
  },
  "hover": Object {
    "backgroundColor": "var(--ds-surface, rgba(222, 235, 255, 0.9))",
    "color": "var(--ds-text-selected, #0052CC)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "skeleton" 1`] = `
Object {
  "backgroundColor": "var(--ds-background-neutral, #F4F5F7)",
  "opacity": 1,
}
`;

exports[`generateTheme custom black text theme should match theme object for "create" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(233, 78, 52, 0.65)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": Object {
    "backgroundColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": Object {
    "backgroundColor": "#E94E34",
    "boxShadow": "0 0 0 2px rgba(233, 78, 52, 0.5)",
    "color": "#ffffff",
  },
  "hover": Object {
    "backgroundColor": "rgba(233, 78, 52, 0.8)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": Object {
    "backgroundColor": "rgba(159, 113, 105, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(159, 113, 105, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "iconButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": Object {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": Object {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px rgba(233, 78, 52, 0.5)",
    "color": "#ffffff",
  },
  "hover": Object {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "navigation" 1`] = `
Object {
  "backgroundColor": "#272727",
  "color": "#ffffff",
}
`;

exports[`generateTheme custom black text theme should match theme object for "primaryButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": Object {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": Object {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px rgba(233, 78, 52, 0.5)",
    "color": "#ffffff",
  },
  "hover": Object {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "productHome" 1`] = `
Object {
  "backgroundColor": "#E94E34",
  "borderRight": "1px solid rgba(255, 255, 255, 0.5)",
  "color": "#ffffff",
}
`;

exports[`generateTheme custom black text theme should match theme object for "search" 1`] = `
Object {
  "default": Object {
    "backgroundColor": "#272727",
    "borderColor": "rgba(255, 255, 255, 0.5)",
    "color": "#ffffff",
  },
  "focus": Object {
    "borderColor": "rgba(233, 78, 52, 0.8)",
    "boxShadow": "0 0 0 2px rgba(233, 78, 52, 0.5)",
  },
  "hover": Object {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "skeleton" 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "opacity": 0.08,
}
`;

exports[`generateTheme custom white text theme should match theme object for "create" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(51, 51, 51, 0.65)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": Object {
    "backgroundColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": Object {
    "backgroundColor": "#333333",
    "boxShadow": "0 0 0 2px rgba(51, 51, 51, 0.5)",
    "color": "#ffffff",
  },
  "hover": Object {
    "backgroundColor": "rgba(51, 51, 51, 0.8)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": Object {
    "backgroundColor": "rgba(105, 105, 105, 0.6)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(105, 105, 105, 0.6)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "iconButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "default": Object {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "focus": Object {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px rgba(51, 51, 51, 0.5)",
    "color": "#000000",
  },
  "hover": Object {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selected": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "navigation" 1`] = `
Object {
  "backgroundColor": "#E8CBD2",
  "color": "#000000",
}
`;

exports[`generateTheme custom white text theme should match theme object for "primaryButton" 1`] = `
Object {
  "active": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "default": Object {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "focus": Object {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px rgba(51, 51, 51, 0.5)",
    "color": "#000000",
  },
  "hover": Object {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selected": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selectedHover": Object {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "productHome" 1`] = `
Object {
  "backgroundColor": "#333333",
  "borderRight": "1px solid rgba(0, 0, 0, 0.5)",
  "color": "#000000",
}
`;

exports[`generateTheme custom white text theme should match theme object for "search" 1`] = `
Object {
  "default": Object {
    "backgroundColor": "#E8CBD2",
    "borderColor": "rgba(0, 0, 0, 0.5)",
    "color": "#000000",
  },
  "focus": Object {
    "borderColor": "rgba(51, 51, 51, 0.8)",
    "boxShadow": "0 0 0 2px rgba(51, 51, 51, 0.5)",
  },
  "hover": Object {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "skeleton" 1`] = `
Object {
  "backgroundColor": "#000000",
  "opacity": 0.08,
}
`;
